--- a/src/components/Paging.astro
+++ b/src/components/Paging.astro
@@ -23,7 +23,7 @@ const {
 ---
 
 <nav
-  class={`max-w-4xl mx-auto my-24 flex ${
+  class={`max-w-4xl mx-auto my-24 flex px-6 lg:px-0 ${
     prevURL ? `justify-between` : `justify-end`
   }`}
 >
