--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -23,7 +23,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime } =
   Astro.props
 ---
 
-<div class="my-24">
+<div class="my-24 px-6 lg:px-0">
   <h1 class="font-bold text-4xl">{title}</h1>
   {subtitle && <p class="text-2xl text-gray-600 my-4">{subtitle}</p>}
 
