--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -106,13 +106,13 @@ const blogPostSchema = [
         />
       )
     }
-    <div class="flex">
-      <div class="w-2/3">
+    <div class="lg:flex">
+      <div class="px-6 lg:px-0 lg:w-2/3">
         <PostBody>
           <Content />
         </PostBody>
       </div>
-      <div class="w-1/3 pl-24 mt-1">
+      <div class="px-6 lg:px-0 lg:w-1/3 lg:pl-24 mt-12 lg:mt-1">
         {
           entry.data.categories.length && (
             <>
