--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -22,112 +22,82 @@ const title = `Support DDEV`
 >
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} subtitle={`We’d love your help!`} />
-    <div class="prose text-lg mt-0 mb-24">
-      <p>
-        DDEV exists because of the generosity of community members and sponsors.<br
-        />
-        There are several ways to get involved and we’d love for you to join us.
-      </p>
-    </div>
 
-    <div class="prose mt-12">
-      <h2>File an Issue or PR</h2>
+    <div class="px-6 lg:px-0">
+      <div class="prose text-lg mt-0 mb-24">
+        <p>
+          DDEV exists because of the generosity of community members and
+          sponsors.<br />
+          There are several ways to get involved and we’d love for you to join us.
+        </p>
+      </div>
 
-      <p>
-        If you have an idea, a bug report, or code to contribute, please take
-        the time to <a
-          href="https://github.com/drud/ddev/blob/master/CONTRIBUTING.md"
-          target="_blank">contribute</a
-        > a GitHub Issue or Pull Request.
-      </p>
+      <div class="prose mt-12">
+        <h2>File an Issue or PR</h2>
 
-      <Img
-        src="/img/pr.png"
-        alt="Screenshot of GitHub PR #217, where @beeradb added new version notifications"
-        placeholder="dominantColor"
-        attributes={{
-          img: {
-            class: `shadow-lg rounded-lg`,
-          },
-        }}
-      />
-    </div>
+        <p>
+          If you have an idea, a bug report, or code to contribute, please take
+          the time to <a
+            href="https://github.com/drud/ddev/blob/master/CONTRIBUTING.md"
+            target="_blank">contribute</a
+          > a GitHub Issue or Pull Request.
+        </p>
 
-    <div class="mt-8 mb-24 flex w-2/5 -mx-2">
-      <CtaButton
-        text="Check Out GitHub Issues →"
-        href={GITHUB_ISSUES_URL}
-        type="hollow"
-        target="_blank"
-      />
-    </div>
-
-    <div class="prose mt-12">
-      <h2>Sponsor Development</h2>
-      <p>
-        We’re grateful for our sponsors, and all contributions to the DDEV
-        Foundation go entirely toward development. We can always use resources
-        to help attract contributors, cover test-running costs, and secure
-        DDEV’s future.
-      </p>
-    </div>
-
-    <div class="mt-4 mb-8 max-w-2xl">
-      <Sponsors />
-    </div>
-
-    <div class="mt-6 mb-24 flex w-2/5 -mx-2">
-      <CtaButton
-        text="Join Our GitHub Sponsors →"
-        href="https://github.com/sponsors/rfay"
-        type="hollow"
-        target="_blank"
-      />
-    </div>
-
-    <div class="prose mt-12">
-      <h2>Help Others</h2>
-      <p>
-        There’s no shortage of questions on Discord, GitHub, and Stack Overflow.
-        If you can help someone out, it helps us focus more on development.
-      </p>
-
-      <Img
-        src="/img/discord.png"
-        alt="Screenshot of Discord server, with several active Q&A channels"
-        placeholder="dominantColor"
-        attributes={{
-          img: {
-            class: `rounded-lg`,
-          },
-        }}
-      />
-    </div>
-
-    <div class="mt-8 mb-24 flex w-2/5 -mx-2">
-      <CtaButton
-        text="Say Hi in Discord →"
-        href={DISCORD_URL}
-        type="hollow"
-        target="_blank"
-      />
-    </div>
-
-    <div class="prose mt-12">
-      <h2>Improve the Docs</h2>
-      <p>
-        It doesn’t matter whether you’ve found a typo, can wordsmith something
-        to better explain or fit <a
-          href="https://ddev.readthedocs.io/en/latest/developers/writing-style-guide/"
-          target="_blank">our style guide</a
-        >, or you’d like to suggest an entirely new section or use case. We’d be
-        happy to have your input!
-      </p>
-
-      <figure>
         <Img
-          src="/img/edit-docs.png"
-          alt="Screenshot visually highlighting the “Edit this page” icon in the docs and pointing to its corresponding GitHub URL"
+          src="/img/pr.png"
+          alt="Screenshot of GitHub PR #217, where @beeradb added new version notifications"
+          placeholder="dominantColor"
+          attributes={{
+            img: {
+              class: `shadow-lg rounded-lg`,
+            },
+          }}
+        />
+      </div>
+
+      <div class="mt-8 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="Check Out GitHub Issues →"
+          href={GITHUB_ISSUES_URL}
+          type="hollow"
+          target="_blank"
+        />
+      </div>
+
+      <div class="prose mt-12">
+        <h2>Sponsor Development</h2>
+        <p>
+          We’re grateful for our sponsors, and all contributions to the DDEV
+          Foundation go entirely toward development. We can always use resources
+          to help attract contributors, cover test-running costs, and secure
+          DDEV’s future.
+        </p>
+      </div>
+
+      <div class="mt-4 mb-8 max-w-2xl">
+        <Sponsors />
+      </div>
+
+      <div class="mt-6 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="Join Our GitHub Sponsors →"
+          href="https://github.com/sponsors/rfay"
+          type="hollow"
+          target="_blank"
+        />
+      </div>
+
+      <div class="prose mt-12">
+        <h2>Help Others</h2>
+        <p>
+          There’s no shortage of questions on Discord, GitHub, and Stack
+          Overflow. If you can help someone out, it helps us focus more on
+          development.
+        </p>
+
+        <Img
+          src="/img/discord.png"
+          alt="Screenshot of Discord server, with several active Q&A channels"
           placeholder="dominantColor"
           attributes={{
             img: {
@@ -135,90 +105,125 @@ const title = `Support DDEV`
             },
           }}
         />
+      </div>
 
-        <figcaption>
-          The pencil icon in the published docs links to the relevant GitHub
-          source for suggestions.
-        </figcaption>
-      </figure>
-    </div>
+      <div class="mt-8 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="Say Hi in Discord →"
+          href={DISCORD_URL}
+          type="hollow"
+          target="_blank"
+        />
+      </div>
 
-    <div class="mt-8 mb-24 flex w-2/5 -mx-2">
-      <CtaButton
-        text="Read the Docs →"
-        href={DOCUMENTATION_URL}
-        type="hollow"
-        target="_blank"
-      />
-    </div>
+      <div class="prose mt-12">
+        <h2>Improve the Docs</h2>
+        <p>
+          It doesn’t matter whether you’ve found a typo, can wordsmith something
+          to better explain or fit <a
+            href="https://ddev.readthedocs.io/en/latest/developers/writing-style-guide/"
+            target="_blank">our style guide</a
+          >, or you’d like to suggest an entirely new section or use case. We’d
+          be happy to have your input!
+        </p>
 
-    <div class="prose mt-12">
-      <h2>Spread the Word</h2>
-      <p>
-        If you like using DDEV, don’t keep it to yourself! Star the project <a
-          href={GITHUB_URL}
-          target="_blank">on GitHub</a
-        > and make sure we know about your latest blog post, tweet, or YouTube video.
-      </p>
+        <figure>
+          <Img
+            src="/img/edit-docs.png"
+            alt="Screenshot visually highlighting the “Edit this page” icon in the docs and pointing to its corresponding GitHub URL"
+            placeholder="dominantColor"
+            attributes={{
+              img: {
+                class: `rounded-lg`,
+              },
+            }}
+          />
 
-      <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">
-          <a
-            href="https://twitter.com/hashtag/fedora?src=hash&ref_src=twsrc%5Etfw"
-            >#fedora</a
-          > 36 (just upgraded from 35) still happily runs <a
-            href="https://twitter.com/hashtag/ddev?src=hash&ref_src=twsrc%5Etfw"
-            >#ddev</a
-          > , one of my most used tools. <a href="https://t.co/9dPAs8BTqg"
-            >pic.twitter.com/9dPAs8BTqg</a
+          <figcaption>
+            The pencil icon in the published docs links to the relevant GitHub
+            source for suggestions.
+          </figcaption>
+        </figure>
+      </div>
+
+      <div class="mt-8 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="Read the Docs →"
+          href={DOCUMENTATION_URL}
+          type="hollow"
+          target="_blank"
+        />
+      </div>
+
+      <div class="prose mt-12">
+        <h2>Spread the Word</h2>
+        <p>
+          If you like using DDEV, don’t keep it to yourself! Star the project <a
+            href={GITHUB_URL}
+            target="_blank">on GitHub</a
+          > and make sure we know about your latest blog post, tweet, or YouTube
+          video.
+        </p>
+
+        <blockquote class="twitter-tweet">
+          <p lang="en" dir="ltr">
+            <a
+              href="https://twitter.com/hashtag/fedora?src=hash&ref_src=twsrc%5Etfw"
+              >#fedora</a
+            > 36 (just upgraded from 35) still happily runs <a
+              href="https://twitter.com/hashtag/ddev?src=hash&ref_src=twsrc%5Etfw"
+              >#ddev</a
+            > , one of my most used tools. <a href="https://t.co/9dPAs8BTqg"
+              >pic.twitter.com/9dPAs8BTqg</a
+            >
+          </p>&mdash; Novák Áron (@NovakAron) <a
+            href="https://twitter.com/NovakAron/status/1541396362885054465?ref_src=twsrc%5Etfw"
+            >June 27, 2022</a
           >
-        </p>&mdash; Novák Áron (@NovakAron) <a
-          href="https://twitter.com/NovakAron/status/1541396362885054465?ref_src=twsrc%5Etfw"
-          >June 27, 2022</a
-        >
-      </blockquote>
-      <script
-        async
-        src="https://platform.twitter.com/widgets.js"
-        charset="utf-8"
-      ></script>
-    </div>
+        </blockquote>
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+      </div>
 
-    <div class="mt-8 mb-24 flex w-2/5 -mx-2">
-      <CtaButton
-        text="Check #DDEV on Twitter →"
-        href={`https://twitter.com/hashtag/DDEV`}
-        type="hollow"
-        target="_blank"
-      />
-    </div>
+      <div class="mt-8 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="Check #DDEV on Twitter →"
+          href={`https://twitter.com/hashtag/DDEV`}
+          type="hollow"
+          target="_blank"
+        />
+      </div>
 
-    <div class="prose mt-12">
-      <h2>Join the Advisory Group</h2>
-      <p>
-        We meet regularly to discuss DDEV’s present and future. You’re welcome
-        to join us!
-      </p>
+      <div class="prose mt-12">
+        <h2>Join the Advisory Group</h2>
+        <p>
+          We meet regularly to discuss DDEV’s present and future. You’re welcome
+          to join us!
+        </p>
 
-      <Img
-        src="/img/advisory-group-call.png"
-        alt="Screenshot of an advisory group Zoom call with a grid of sixteen faces"
-        placeholder="dominantColor"
-        attributes={{
-          img: {
-            class: `rounded-lg`,
-          },
-        }}
-      />
-    </div>
+        <Img
+          src="/img/advisory-group-call.png"
+          alt="Screenshot of an advisory group Zoom call with a grid of sixteen faces"
+          placeholder="dominantColor"
+          attributes={{
+            img: {
+              class: `rounded-lg`,
+            },
+          }}
+        />
+      </div>
 
-    <div class="mt-8 mb-24 flex w-2/5 -mx-2">
-      <CtaButton
-        text="Read Advisory Group Notes →"
-        href={`https://github.com/drud/ddev/discussions/categories/ddev-advisory-group`}
-        type="hollow"
-        target="_blank"
-      />
+      <div class="mt-8 mb-24 lg:flex lg:w-2/5">
+        <CtaButton
+          text="Read Advisory Group Notes →"
+          href={`https://github.com/drud/ddev/discussions/categories/ddev-advisory-group`}
+          type="hollow"
+          target="_blank"
+        />
+      </div>
     </div>
   </main>
 </Layout>
