Fix footer external link icons.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -54,7 +54,11 @@ const navigation = {
               {
                 navigation.support.map((item) => (
                   <li>
-                    <a href={item.href} class="text-base" target="_blank">
+                    <a
+                      href={item.href}
+                      class="text-base external-link"
+                      target="_blank"
+                    >
                       {item.name}
                     </a>
                   </li>
