More layout improvement.

--- a/src/components/FeatureImage.astro
+++ b/src/components/FeatureImage.astro
@@ -13,7 +13,7 @@ export interface Props {
 const { src, alt, caption = "", credit, shadow = false } = Astro.props
 ---
 
-<figure class={`w-full mx-auto mb-24 z-10`}>
+<figure class={`w-full mx-auto mb-24 z-10 px-6 lg:px-0`}>
   {
     src.includes(".svg") ? (
       <img src={src} alt={alt} />
