--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ const title = `404`
 ---
 
 <Layout title={title} noindex={true}>
-  <main class="max-w-4xl mx-auto mb-24">
+  <main class="max-w-4xl mx-auto mb-24 px-6 lg:px-0">
     <h1 class="font-mono text-5xl my-24 mb-8">{title}</h1>
     <PostBody>
       <p>The page you’re looking for doesn’t exist. :(</p>
