--- a/src/pages/blog/category/[slug].astro
+++ b/src/pages/blog/category/[slug].astro
@@ -41,7 +41,7 @@ const title = `Posts in “${name}”`
   description={`List of blog posts in the “${name}” category.`}
 >
   <main class="max-w-4xl mx-auto mb-24">
-    <div class="flex space-x-12 py-24">
+    <div class="py-24 px-6 lg:px-0">
       <h1 class="font-bold text-4xl">Posts in “{name}”</h1>
     </div>
 
