--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -125,7 +125,7 @@ const title = `Search`
 >
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} />
-    <div class="max-w-3xl">
+    <div class="max-w-3xl px-6 lg:px-0">
       <label for="search-keywords" class="sr-only">Search Keywords</label>
       <input
         id="search-keywords"
