--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -85,7 +85,9 @@ Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046`,
         minutes, multiple concurrent projects, and less time to deployment.
       </h2>
 
-      <div class="my-8 flex space-x-4 w-3/4">
+      <div
+        class="my-8 flex-cols space-y-4 md:flex md:space-x-4 md:space-y-0 md:w-3/4"
+      >
         <CtaButton text="Get Started" href="/get-started" />
         <CtaButton
           text="Documentation"
