Fix wrapping in Firefox.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -79,21 +79,36 @@ import {
     <div class="w-2/3 flex justify-end items-center">
       <ul class="hidden lg:flex">
         <li class="mx-4">
-          <a class="font-bold" href="/get-started" rel="prefetch">Get Started</a
+          <a
+            class="font-bold whitespace-nowrap"
+            href="/get-started"
+            rel="prefetch">Get Started</a
           >
         </li>
         <li class="mx-4">
-          <a class="font-bold" href={DOCUMENTATION_URL} target="_blank">Docs</a>
+          <a
+            class="font-bold whitespace-nowrap"
+            href={DOCUMENTATION_URL}
+            target="_blank">Docs</a
+          >
         </li>
         <li class="mx-4">
-          <a class="font-bold" href="/blog" rel="prefetch">Blog</a>
+          <a class="font-bold whitespace-nowrap" href="/blog" rel="prefetch"
+            >Blog</a
+          >
         </li>
         <li class="mx-4">
-          <a class="font-bold" href={GITHUB_URL} target="_blank">GitHub</a>
+          <a
+            class="font-bold whitespace-nowrap"
+            href={GITHUB_URL}
+            target="_blank">GitHub</a
+          >
         </li>
         <li class="mx-4">
-          <a class="font-bold" href="/support-ddev" rel="prefetch"
-            >❤️ Support DDEV</a
+          <a
+            class="font-bold whitespace-nowrap"
+            href="/support-ddev"
+            rel="prefetch">❤️ Support DDEV</a
           >
         </li>
       </ul>
