Improve headshot alt text.

--- a/src/components/BlogPostCard.astro
+++ b/src/components/BlogPostCard.astro
@@ -82,7 +82,7 @@ const firstCategory = post.data.categories.length
               <img
                 class="h-10 w-10 rounded-full"
                 src={authorImage}
-                alt={post.data.author}
+                alt={`${post.data.author} avatar`}
               />
             </a>
           </div>
