Fix OS detection in Chrome on macOS.

--- a/src/components/PlatformPicker.astro
+++ b/src/components/PlatformPicker.astro
@@ -68,7 +68,7 @@ const { heading, inputName = "platform" } = Astro.props
     var userAgent = window.navigator.userAgent,
       platform =
         window.navigator?.userAgentData?.platform || window.navigator.platform,
-      macosPlatforms = ["Macintosh", "MacIntel", "MacPPC", "Mac68K"],
+      macosPlatforms = ["macOS", "Macintosh", "MacIntel", "MacPPC", "Mac68K"],
       windowsPlatforms = ["Win32", "Win64", "Windows", "WinCE"],
       os = null
 
