Update not-API-call-related `drud/ddev` → `ddev/ddev`.

--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -22,9 +22,9 @@ const { latestVersion } = Astro.props
             >Open any repository</a
           > using Gitpod and install DDEV:
         </p>
-        <Terminal code={`→ brew install drud/ddev/ddev`} />
+        <Terminal code={`→ brew install ddev/ddev/ddev`} />
       </div>
-      <a href="https://gitpod.io/#https://github.com/drud/ddev"
+      <a href="https://gitpod.io/#https://github.com/ddev/ddev"
         ><img
           src="/img/open-in-gitpod.svg"
           alt="Open in Gitpod"
@@ -44,7 +44,7 @@ const { latestVersion } = Astro.props
             Edit the project’s <code>.devcontainer/devcontainer.json</code> file
             to include these two lines in the “features” section:
             <Code
-              code={`"features": {\n    "ghcr.io/devcontainers/features/docker-in-docker:1": {},\n    "ghcr.io/drud/ddev/install-ddev:latest": {}\n},`}
+              code={`"features": {\n    "ghcr.io/devcontainers/features/docker-in-docker:1": {},\n    "ghcr.io/ddev/ddev/install-ddev:latest": {}\n},`}
               theme="nord"
               lang="json"
             />
