Administrative PowerShell, all the way down.

--- a/src/components/quickstart/Windows.astro
+++ b/src/components/quickstart/Windows.astro
@@ -23,7 +23,7 @@ const { latestVersion } = Astro.props
     with Ubuntu
   </h2>
 
-  <p>Run the following in a PowerShell v5 terminal:</p>
+  <p>Run the following in an administrative PowerShell v5 terminal:</p>
 
   <Terminal type="powershell" code={`> wsl --install`} />
 
