Make sure Docker is running after macOS install.

--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -47,6 +47,11 @@ const { latestVersion } = Astro.props
 </Tabs>
 
 <div class="prose">
+  <p>
+    Launch Docker Desktop, accept the license agreement, and make sure Docker is
+    started and running.
+  </p>
+
   <p>Confirm that you’ve now got a Docker provider:</p>
   <Terminal code={`→ docker -v\nDocker version 20.10.21, build baeda1f`} />
 
