--- a/src/components/quickstart/Cloud.astro
+++ b/src/components/quickstart/Cloud.astro
@@ -22,7 +22,7 @@ const { latestVersion } = Astro.props
             >Open any repository</a
           > using Gitpod and install DDEV:
         </p>
-        <Terminal code={`→ brew install ddev/ddev/ddev`} />
+        <Terminal code={`→ apt install ddev/ddev/ddev`} />
       </div>
       <a href="https://gitpod.io/#https://github.com/ddev/ddev"
         ><img
