Finish setup with `ddev launch`.

--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -163,6 +163,14 @@ const { latestVersion } = Astro.props
       ><code>ddev composer install</code>
     </a>.
   </p>
+
+  <p>
+    Now run the <a
+      href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
+      target="_blank">launch command</a
+    > to open your project in a browser:
+  </p>
+  <Terminal type="ubuntu" code={`$ ddev launch`} />
 </div>
 
 <div class="prose">
