--- a/src/components/quickstart/Mac.astro
+++ b/src/components/quickstart/Mac.astro
@@ -109,6 +109,14 @@ const { latestVersion } = Astro.props
       ><code>ddev composer install</code>
     </a>.
   </p>
+
+  <p>
+    Now run the <a
+      href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#launch"
+      target="_blank">launch command</a
+    > to open your project in a browser:
+  </p>
+  <Terminal code={`→ ddev launch`} />
 </div>
 
 <div class="prose">
