Add note of guidance.

--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -1,4 +1,15 @@
 ---
+/**
+ * This page is meant to be the quickest-possible way to help someone
+ * install and try DDEV. If you make any changes to it, make sure you:
+ *
+ * - Assume they don’t have Docker installed and have never used DDEV.
+ * - Are able to complete all critical steps without leaving the page.
+ * - Only require decision-making when it’s unavoidable.
+ * - Gently link to documentation that elaborates or further explains
+ *   what’s going on—**NOT** providing additional steps that should be
+ *   detailed here.
+ */
 import { getLatestReleaseVersion } from "../lib/api"
 import Cloud from "@components/quickstart/Cloud.astro"
 import Heading from "@components/Heading.astro"
